Added coming soon resume file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="sidebar">
       <div class="top"></div>
       <div class="middle">
-        <a href="assets/dummy.pdf" target="_blank">Resume</a>
+        <a href="assets/resume_coming_soon.pdf" target="_blank">Resume</a>
       </div>
       <div class="bottom"></div>
     </section>
