--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="content-wrapper">
+    <div class="back-image"></div>
     <section class="graphic">
       <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.5 52.8"><path d="M75.5,3.6l-5.8-.8L63.1,0h-.2L51,7.2,33.7,13.6l2,.5L18.5,20.8l3,.1-4.4,2-5-2,1.8,3.3L3.3,23.1l5.8,2.3L0,28.7,13.7,27h0l27.5,9,2,8.6h0L45,47.2l1.4,5.1V48.7l2.9,4.1-2.2-5.4-2.2-5.3L47.5,34l5.4-4.7h0L69,7.4,78.5,6Zm-5.7-.5,4.9.7L68.9,5.6ZM69.4,3l-.9,2.6L63.7.6ZM63.1.4l5.3,5.5L55.2,14.8Zm-.5.2L54.7,14.9,51.4,7.4ZM35,13.5,51,7.6l3.3,7.5-18-1.2ZM20.3,20.6l16-6.2,1.6,4.8L22.4,20.7Zm16.4-6.2,15.6,6.4L39.5,23.1ZM22.3,21l15.6-1.5,1.2,3.7-14.4,2h-.3l-6.7-2Zm-9.4.7,4.3,1.7h0L22.7,25l-8.3-.7ZM3,28l6.6-2.5L13,26.7Zm6.7-2.8L6,23.7l8.6,1h0l8.5.7-9.3,1.3ZM14.6,27l10.1-1.4h0L36.3,24,19,28.4Zm5,1.6,19.8-5.1h.2l12.5-2.3L34.2,33.4Zm21.9,7.2-6.8-2.2L52.4,21.5,43.6,36.7l-2.1-.9Zm.1.4,1.9.8,1,5.1-1,2Zm5.1,11.3,1.1,2.6L46.3,48l-1-3.8Zm-.7.7v1.4L45.3,47l-1.7-2.5,1-2Zm-1.3-6.8-.9-4.5L47,34.4Zm7.9-12.3-5.4,4.7-3,2.3,8.5-14.7Zm.2-8.5L37.5,14.4l16.9,1.1Zm.3.4v-.2l1.1-3.4-1.2,9Zm0,7.5,1.8-13.1L68.6,6.2l.2,1ZM68.8,6.1,75.4,4l2.3,1.9L69,7.1Z" style="fill:#fff"/></svg>
     </section>
