--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="content">
       <h1>Raven Askew</h1>
       <h2>Web Developer</h2>
-      <p>Specializing in quality I am a detail oriented Web Developer who builds and maintains WordPress websites with a focus on front end web development. My background in communications is one of my greatest assets in communicating with team members and collaborators. I would love to hear from you if you would like to collaborate on any web projects or website maintence!</p>
+      <p>Specializing in quality, I am a detail oriented Web Developer who builds and maintains WordPress websites with a focus on front end web development. My background in communications is one of my greatest assets in communicating with team members and collaborators. I would love to hear from you if you would like to collaborate on any web projects or website maintenance!</p>
     </section>
     <section class="sidebar">
       <div class="top"></div>
