Added Google Site Verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Kaushan+Script&family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/main.css">
+
+  <meta name="google-site-verification" content="9n-h226T3Eo9hXTnCOGSnsZ9vGXpzGjX1DnzEhma4eM" />
 </head>
 <body>
   <div class="content-wrapper">
