Updated LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="footer">
       <div class="left"></div>
       <div class="right">
-        <a href="https://www.linkedin.com/in/ravenaskew" target="_blank"><span class="fab fa-linkedin-in"></span></a>
+        <a href="https://www.linkedin.com/in/raveneveridge" target="_blank"><span class="fab fa-linkedin-in"></span></a>
         <a href="https://github.com/raveve/" target="_blank"><span class="fab fa-github"></span></a>
         <a href="https://www.instagram.com/experimentalprototype/" target="_blank"><span class="fab fa-instagram"></span></a>
         <a href="mailto:raven.askew@gmail.com"><span class="far fa-envelope"></span></a>
