--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://www.linkedin.com/in/raveneveridge" target="_blank"><span class="fab fa-linkedin-in"></span></a>
         <a href="https://github.com/raveve/" target="_blank"><span class="fab fa-github"></span></a>
         <a href="https://www.instagram.com/experimentalprototype/" target="_blank"><span class="fab fa-instagram"></span></a>
-        <a href="mailto:raven.askew@gmail.com"><span class="far fa-envelope"></span></a>
+        <a href="mailto:ravenXeveridge@gmail.com"><span class="far fa-envelope"></span></a>
       </div>
     </section>
   </div>
