--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>Raven Everidge</h1>
       <h2>Web Developer</h2>
       <h2>Quality Assurance Specialist</h2>
-      <p>Specializing in quality, I am a detail oriented Web Developer who builds and maintains WordPress websites with a focus on front end web development. My background in communications is one of my greatest assets in communicating with team members and collaborators. I would love to hear from you if you would like to collaborate on any web projects or website maintenance!</p>
+      <p>Specializing in quality, I am a detail oriented Web Developer and Quality Assurance Specialist who builds and maintains WordPress websites with a focus on front end web development. My background in communications is one of my greatest assets in communicating with team members and collaborators. I would love to hear from you if you would like to collaborate on any web projects or website maintenance! I am currently looking for a remote role in Manual Web Quality Assurance Testing, Front-End Web Development or Project Management.</p>
     </section>
     <section class="sidebar">
       <div class="top"></div>
